--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -10,7 +10,9 @@
     "@types/jest": "^27.5.2",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "chart.js": "^4.5.1",
     "react": "^19.2.3",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
     "react-scripts": "5.0.1",
     "recharts": "^3.6.0",
@@ -44,6 +46,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/chart.js": "^2.9.41",
     "@types/node": "^20.19.27",
     "autoprefixer": "^10.4.23",
     "postcss": "^8.5.6",
