--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -11,9 +11,11 @@
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
     "chart.js": "^4.5.1",
+    "lucide-react": "^0.562.0",
     "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
+    "react-router-dom": "^7.11.0",
     "react-scripts": "5.0.1",
     "recharts": "^3.6.0",
     "typescript": "^4.9.5",
